# hse-python-backend

./: pyproject.toml
lecture_2/hw/shop_api/: exceptions.py  main.py  schemas.py
main/: FactorialHandler.py  FibonacciHandler.py  MeanHandler.py  QueryParser.py  Response.py  main.py
